<resources>
    <string name="app_name">SQLite App</string>
    <string name="student_name">Student Name</string>
    <string name="marks">Marks</string>
    <string name="subject">Subject</string>
    <string name="id">ID</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="view_data">View Data</string>
</resources>
